# challenge-basico

./: .gitignore  README.md  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  dataset_extraction.md  mlops.md  model_construction.md  results.md  technical_run_guide.md
outputs/reports/: model_comparison_report.txt
src/: evaluation.py  exceptions.py  ingestion.py  logger.py  mlflow_pipeline.py  preprocessing.py  run_sentiment_analysis.py  sentiment_pysentimiento.py  sentiment_vader.py
tests/: test_evaluation.py  test_ingestion.py  test_preprocessing.py
